nav overlap issue is fixed

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -16,7 +16,7 @@
 	}
     &.shrink-nav{
     	position: fixed;
-    	z-index: 10;
+    	z-index: 11;
     	width: 100%;
     	opacity: 0;
     	animation: smoothScroll 1s forwards;
